--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>hello from jenkins</h1>
-        <h2>my first build</h2>
+        <h2>my first build 1</h2>
+        <h2>my 2nd build </h2>
     </body>
 </html>
